unpackaged/main/default/objects/MarketingPlanAdjustments__c/MarketingPlanAdjustments__c.object-meta.xml
<CustomObject>
    <description>Marketing Plan Budget Transfers form.</description>
    <label>Marketing Plan Transfer</label>
    <nameField>
        <displayFormat>MPADJ-{000000}</displayFormat>
        <label>Transfer Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Plan Transfers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>