unpackaged/main/default/objects/MarketingPlanAdjustments__c/fields/Brand_Manager_From__c.field-meta.xml
<CustomField>
    <fullName>Brand_Manager_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Manager From</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Marketing_Plan_Adjustments_and_Transfer1</relationshipName>
    <type>Lookup</type>
</CustomField>