unpackaged/main/default/objects/MarketingPlanAdjustments__c/fields/Country_From__c.field-meta.xml
<CustomField>
    <fullName>Country_From__c</fullName>
    <formula>text(TransferringMarketingPlan__r.Country__c)</formula>
    <label>Country From</label>
    <type>Text</type>
</CustomField>