unpackaged/main/default/objects/MarketingPlanAdjustments__c/fields/ReasonforRequest__c.field-meta.xml
<CustomField>
    <fullName>ReasonforRequest__c</fullName>
    <inlineHelpText>Brief description of the reason for the request.</inlineHelpText>
    <label>Reason for Request</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>