unpackaged/main/default/objects/MarketingPlanAdjustments__c/fields/Receiving_Marketing_Plan_Queue_Email__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Marketing_Plan_Queue_Email__c</fullName>
    <description>This email will be triggered to the designated Marketing Plan Queue Email receiving transferred funds, in the event of an approval or rejection of funds transfer.</description>
    <label>Receiving Marketing Plan Queue Email</label>
    <type>Email</type>
</CustomField>