unpackaged/main/default/objects/MarketingPlanAdjustments__c/fields/Region_From__c.field-meta.xml
<CustomField>
    <fullName>Region_From__c</fullName>
    <formula>text(TransferringMarketingPlan__r.Region__c)</formula>
    <label>Region From</label>
    <type>Text</type>
</CustomField>