unpackaged/main/default/objects/MarketingPlanAdjustments__c/fields/RequestStatusDescription__c.field-meta.xml
<CustomField>
    <fullName>RequestStatusDescription__c</fullName>
    <description>Field used to populate reason for failed processing of adjustment.</description>
    <label>Request Status Description</label>
    <type>TextArea</type>
</CustomField>