unpackaged/main/default/objects/MarketingPlanAdjustments__c/fields/Transferring_MP_Unallocated_Budget__c.field-meta.xml
<CustomField>
    <fullName>Transferring_MP_Unallocated_Budget__c</fullName>
    <formula>TransferringMarketingPlan__r.CampaignBalance__c</formula>
    <label>Transferring MP Unallocated Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>