unpackaged/main/default/objects/MarketingPlanAdjustments__c/fields/Transferring_Territory__c.field-meta.xml
<CustomField>
    <fullName>Transferring_Territory__c</fullName>
    <formula>TransferringMarketingPlan__r.Territory__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transferring Territory</label>
    <type>Text</type>
</CustomField>