unpackaged/main/default/objects/MarketingPlanAdjustments__c/fields/TransferringMarketingPlan__c.field-meta.xml
<CustomField>
    <fullName>TransferringMarketingPlan__c</fullName>
    <inlineHelpText>Marketing Plan transferring additional funds.</inlineHelpText>
    <label>Transferring Marketing Plan</label>
    <referenceTo>MarketingPlan__c</referenceTo>
    <relationshipLabel>Marketing Plan Transfers (Transferring Marketing Plan)</relationshipLabel>
    <relationshipName>Marketing_Plan_Transfer</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>