unpackaged/main/default/objects/MarketingPlanAdjustments__c/fields/TransferringMPYearHidden__c.field-meta.xml
<CustomField>
    <fullName>TransferringMPYearHidden__c</fullName>
    <formula>text(TransferringMarketingPlan__r.Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transferring MP Year Hidden</label>
    <type>Text</type>
</CustomField>