unpackaged/main/default/objects/MarketingPlanAdjustments__c/fields/Within_Same_Region__c.field-meta.xml
<CustomField>
    <fullName>Within_Same_Region__c</fullName>
    <formula>if( text(TransferringMarketingPlan__r.Region__c) =  text(ReceivingMarketingPlan__r.Region__c),"Yes","No")</formula>
    <label>Within Same Region?</label>
    <type>Text</type>
</CustomField>