unpackaged/main/default/objects/MarketingPlanAdjustments__c/recordTypes/Creation.recordType-meta.xml
<RecordType>
    <fullName>Creation</fullName>
    <active>true</active>
    <description>Record Type used for initial creation</description>
    <label>Creation</label>
</RecordType>