unpackaged/main/default/objects/MarketingPlanAdjustments__c/validationRules/MarketingPlanCurrenciesMatch.validationRule-meta.xml
<ValidationRule>
    <fullName>MarketingPlanCurrenciesMatch</fullName>
    <active>false</active>
    <description>Transferring and Receiving Marketing Plan currencies must match.</description>
    <errorConditionFormula>text(TransferringMarketingPlan__r.CurrencyIsoCode) &lt;&gt;  text(ReceivingMarketingPlan__r.CurrencyIsoCode)</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Transferring and Receiving Marketing Plan currencies must match.</errorMessage>
</ValidationRule>