unpackaged/main/default/objects/MarketingPlanAdjustments__c/validationRules/TransferMustBeGreaterThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>TransferMustBeGreaterThanZero</fullName>
    <active>true</active>
    <description>Transfer amount must be greater than zero.</description>
    <errorConditionFormula>Amount__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Transfer amount must be greater than zero.</errorMessage>
</ValidationRule>