unpackaged/main/default/objects/MarketingPlanAdjustments__c/validationRules/TransferringMPYearequalsReceivingMPYear.validationRule-meta.xml
<ValidationRule>
    <fullName>TransferringMPYearequalsReceivingMPYear</fullName>
    <active>true</active>
    <errorConditionFormula>text(TransferringMarketingPlan__r.Year__c)  &lt;&gt;  text(ReceivingMarketingPlan__r.Year__c)</errorConditionFormula>
    <errorMessage>Year of Transferring Marketing Plan does not equal Year of Receiving Marketing Plan.</errorMessage>
</ValidationRule>