unpackaged/main/default/objects/MarketingPlanAdjustments__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TransferringMarketingPlan__c</columns>
    <columns>ReceivingMarketingPlan__c</columns>
    <columns>Amount__c</columns>
    <columns>Request_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>